# ecies-rust-ffi

./: .gitignore  Cargo.toml  README.md  build.sh  generate_xcframework.sh
android/: Cargo.toml  cargo-config.toml
android/.cargo/: config
android/release/: AndroidManifest.xml  build.gradle
android/src/: lib.rs  main.rs
ios/: README.md  build.sh
ios/src/: lib.rs
src/: lib.rs  main.rs
