[package]
name = "ecies"
version = "0.1.0"
edition = "2021"

[lib]
name = "ecies"
crate-type = [ "staticlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecies = { git = "https://github.com/ecies/rs", version = "0.2.3" }
libsecp256k1 = "0.7.1"
rand = {version = "0.8.5"}
openssl = { version = "0.10.35", features = ["vendored"] }
hex = "0.4.3"
base64 = "0.20.0"