[package]
name = "ecies"
version = "1.0.0"
edition = "2021"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[lib]
name = "ecies"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecies = { git = "https://github.com/ecies/rs", version = "0.2.3" }
libsecp256k1 = "0.7.1"
rand = {version = "0.8.5"}
openssl = { version = "0.10.45", features = ["vendored"] }
#openssl-sys = "0.9.80"
hex = "0.4.3"
base64 = "0.20.0"

#openssl-sys = { version = "0.9.80" , features = ["vendored"] }
#openssl = { version = "0.10.35", features = ["vendored"] }